[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 6 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VariableJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GrabLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( -16, 0 )

[node name="GrabRight" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 16, 0 )

[node name="Camera" parent="." instance=ExtResource( 4 )]

[node name="RoomDetectorLeft" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetectorLeft"]
position = Vector2( -6, -8 )
shape = SubResource( 2 )

[node name="RoomDetectorRight" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetectorRight"]
position = Vector2( 6, -8 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 18

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 3 )

[connection signal="area_entered" from="RoomDetectorLeft" to="." method="_on_RoomDetector_area_entered"]
[connection signal="area_entered" from="RoomDetectorLeft" to="." method="_on_RoomDetectorLeft_area_entered"]
[connection signal="area_entered" from="RoomDetectorRight" to="." method="_on_RoomDetectorRight_area_entered"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]
